--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,26 @@ section {
     margin-bottom: 35px;
 }
 
+.jcc {
+    justify-content: center;
+
+}
+
+.d-flex {
+    display: flex;
+}
+
+.f-c {
+    flex-direction: column;
+}
+.gap{
+    gap: 10px;
+}
+
+.box {
+    padding-left: 50px;
+}
+
 .box-1 {
     width: 70px;
     height: 76px;
@@ -70,28 +90,58 @@ section {
 .card {
     box-shadow: 0px 13px 19px 0px #00000012;
     max-width: 237px;
-    height: 292px;
+    height: 280px;
     padding: 35px 40px 35px 40px;
     letter-spacing: 0.10000000149011612px;
 
 }
 
-.h1 {
+.head-1 {
+    font-family: "Montserrat", sans-serif;
+    font-size: 35px;
+    font-weight: 700;
+    line-height: 50px;
+    letter-spacing: 0.20000000298023224px;
+    text-align: left;
+
+}
+
+.para-1 {
+    font-family: "Montserrat", sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24px;
+    letter-spacing: 0.10000000149011612px;
+    text-align: left;
+    padding-top: 15px;
+}
+
+.para-2 {
+    font-family: "Montserrat", sans-serif;
     font-size: 14px;
-    font-weight: 400;
+    font-weight: 500;
     line-height: 20px;
     letter-spacing: 0.20000000298023224px;
+    text-align: left;
+    color: #737373;
+    padding-top: 10px;
 }
 
-.jcc {
-    justify-content: center;
-
+.para-3 {
+    font-family: "Montserrat", sans-serif;
+    font-size: 15px;
+    font-weight: 500;
+    line-height: 20px;
+    letter-spacing: 0.20000000298023224px;
+    text-align: left;
+    color: #737373;
 }
 
-.d-flex {
-    display: flex;
-}
-
-.f-c {
-    flex-direction: column;
+.lm {
+    font-family: "Montserrat", sans-serif;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 24px;
+    letter-spacing: 0.20000000298023224px;
+    text-align: left;
 }
